# slack-question-analyzer

./: .dockerignore  .env.example  .gitignore  BACKEND_INTEGRATION.md  COMPREHENSIVE_IMPROVEMENTS.md  Dockerfile  GITHUB_SETUP.md  OLLAMA_SETUP.md  OPTIMIZATION_NOTES.md  PIPELINE.md  QUICKSTART.md  README.md  TESTING.md  UI_DASHBOARD_PLAN.md  api_server.py  docker-compose.yml  example_input.txt  push_to_github.bat  pyproject.toml  requirements.txt  run_api_server.bat  run_tests.bat  seed_topics.json  setup.bat  setup.ps1  setup.sh  start.bat  start.command  taxonomy.json  test_api.py  test_ollama.py  test_syntax.py
Question Analyzer Design System/: HANDOFF.md  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
fixtures/: field_run_2026-06-10.json  mft_synthetic_1.json  mft_synthetic_2.json  mft_synthetic_3.json  mft_synthetic_4.json  mft_synthetic_5.json  mft_synthetic_6.json  mft_synthetic_7.json  mft_test_answer_key.md  mft_test_answer_key_2.md  mft_test_answer_key_3.md  mft_test_answer_key_4.md  mft_test_answer_key_5.md  mft_test_answer_key_6.md  mft_test_answer_key_7.md  mft_test_transcript.txt  mft_test_transcript_2.txt  mft_test_transcript_3.txt  mft_test_transcript_4.txt  mft_test_transcript_5.txt  mft_test_transcript_6.txt  mft_test_transcript_7.txt
slack_question_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  disk_cache.py  evaluation.py  exporters.py  group_labeler.py  inputs.py  model_defaults.py  question_extractor.py  similarity_analyzer.py  taxonomy.py  topic_bank.py  weekly_stats.py
src/: __init__.py  (+7 more)
(+77 files in other folders)
