[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-question-analyzer"
version = "2.10.0"
description = "AI-powered analysis of Slack questions: extraction, semantic grouping, ranking, and LLM topic labels"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    # Web API + dashboard (api_server.py)
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4",
]

[project.scripts]
slack-analyzer = "slack_question_analyzer.cli:cli"

[tool.setuptools.packages.find]
include = ["slack_question_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
